# structify

./: .gitignore  README.md  pyproject.toml
src/structfast/: __init__.py  builder.py  cli.py  exceptions.py  models.py  parser.py  utils.py
tests/: test_builder.py  test_cli.py  test_parser.py
