[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structfast"
version = "0.1.0"
description = "Turn text-based folder trees into real directories and files."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "LakshmanS27" }
]
keywords = ["cli", "filesystem", "scaffolding", "tree", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities"
]
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "pyperclip>=1.9,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0"
]

[project.scripts]
structfast = "structfast.cli:app"

[project.urls]
Homepage = "https://github.com/LakshmanS27/structfast"
Repository = "https://github.com/LakshmanS27/structfast"
Issues = "https://github.com/LakshmanS27/structfast/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
package = true
default-groups = ["dev"]
